--- a/appproject/accounts/templates/accounts/t_login.html
+++ b/appproject/accounts/templates/accounts/t_login.html
@@ -55,7 +55,7 @@
             <label for="id_password">パスワード</label>
             <input type="password" name="password" id="id_password" required>
             <div class="links">
-                <a href="{% url 'accounts:teacher_signup' %}" class="muted">アカウント新規作成リンク</a>
+                <a href="{% url 'accounts:teacher_signup' %}" class="muted">アカウント新規作成</a>
             </div>
             <button type="submit">ログイン</button>
         </form>
