アカウント、グループ

--- a/appproject/accounts/templates/accounts/t_account.html
+++ b/appproject/accounts/templates/accounts/t_account.html
@@ -55,7 +55,7 @@
             <a href="#">システムタブ</a>
             <a href="#">アルゴリズムタブ</a>
             <a href="#">進捗管理タブ</a>
-            <a href="{% url 'accounts:account_entry' %}">アカウント</a>
+            <a href="{% url 'accounts:karihome' %}">アカウント</a>
         </nav>
     </div>
 
